[package]
name = "pallet-smartcontracts"
description = "FRAME pallet template for defining custom runtime logic. (polkadot v1.15.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sxt-core.workspace = true
pallet-permissions.workspace = true 
pallet-tables.workspace = true 
pallet-indexing.workspace = true
native-api = { workspace = true, default-features = false}

[dev-dependencies]
pallet-commitments.workspace = true
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
pallet-system-tables.workspace = true
sp-staking.workspace = true
frame-election-provider-support.workspace = true
pallet-staking-reward-curve.workspace = true
pallet-timestamp.workspace = true
pallet-balances.workspace = true
pallet-staking.workspace = true
proof-of-sql-static-setups = { workspace = true, features = ["io"] }
native.workspace = true
arrow.workspace = true
proof-of-sql-commitment-map.workspace = true
pallet-session.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sxt-core/std",
	"pallet-permissions/std",
	"pallet-tables/std",
	"pallet-indexing/std",
	"native-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]

[lints]
workspace = true
