[package]
name = "pallet-system-tables"
description = "Substrate pallet for parsing system information out of submitted data"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-tables.workspace = true
pallet-balances.workspace = true
pallet-commitments.workspace = true
pallet-staking.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-offences.workspace = true
sp-staking.workspace = true
sxt-core = { default-features = false, workspace = true }
sp-runtime.workspace = true
on-chain-table = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
spin.workspace = true
sp-io.workspace = true
hex.workspace = true

[dev-dependencies]
proof-of-sql-static-setups = { workspace = true, features = ["io"] }
frame-election-provider-support.workspace = true
pallet-staking-reward-curve.workspace = true
pallet-authorship.workspace = true
pallet-timestamp.workspace = true
pallet-balances.workspace = true
pallet-staking.workspace = true
pallet-grandpa.workspace = true
pallet-babe.workspace = true
pallet-authority-discovery.workspace = true
pallet-permissions.workspace = true

sp-authority-discovery.workspace = true
sp-consensus-babe.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-tables/std",
	"pallet-balances/std",
	"pallet-commitments/std",
	"pallet-staking/std",
	"pallet-babe/std",
	"sxt-core/std",
	"sp-runtime/std",
	"on-chain-table/std",
	"frame-election-provider-support/std",
	"pallet-authorship/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-authority-discovery/std",
	"pallet-permissions/std",
	"pallet-offences/std",
	"sp-authority-discovery/std",
	"sp-consensus-babe/std",
	"sp-staking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-offences/try-runtime",
]

[lints]
workspace = true

