[package]
name = "commitment-sql"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
const_format.workspace = true
ahash.workspace = true
indexmap.workspace = true
itertools.workspace = true
on-chain-table.workspace = true
proof-of-sql.workspace = true
proof-of-sql-commitment-map.workspace = true
rayon = { workspace = true, optional = true }
snafu.workspace = true
sqlparser.workspace = true
sxt-core.workspace = true

[dev-dependencies]
proof-of-sql-static-setups = { workspace = true, features = ["io"] }
rand.workspace = true
rand_chacha.workspace = true
primitive-types.workspace = true
sxt-core = { workspace = true, features = ["std"] }

[features]
std = ["sxt-core/std"]
cpu-perf = ["std", "dep:rayon", "proof-of-sql/cpu-perf"]

[lints]
workspace = true
